--- a/config/database.yml
+++ b/config/database.yml
@@ -26,7 +26,7 @@ development:
   host: localhost
   database: relay_development
   username: postgres
-  password: Andreylol99!
+  password: <%=ENV.fetch('db_password')%>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -63,7 +63,7 @@ test:
   host: localhost
   database: relay_test
   username: postgres
-  password: Andreylol99!
+  password: <%=ENV.fetch('db_password')%>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
