--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "prop-types": "^15.7.2",
     "resolve-url-loader": "^3.1.0",
+    "sweetalert": "^2.1.2",
     "uikit": "^3.1.2",
     "webpack-cli": "^3.3.0"
   },
